--- a/business/alpha-engine/package.json
+++ b/business/alpha-engine/package.json
@@ -8,11 +8,14 @@
     "run": "node --no-warnings=ExperimentalWarning --loader tsx src/main.ts",
     "webhooks": "tsx src/webhook_server.ts",
     "pulse": "tsx -e \"import {getPulseTokenTransactions} from './src/pulse'; getPulseTokenTransactions({}).then(r=>console.log(JSON.stringify(r,null,2))).catch(e=>{console.error(e); process.exit(1);});\"",
-    "pulse:arb": "tsx src/pulse_arb.ts"
+    "pulse:arb": "tsx src/pulse_arb.ts",
+    "pulse:quotes": "tsx src/quote_compare.ts",
+    "pulse:onchain": "tsx src/pulse_onchain_arb.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "pino": "^9.0.0",
+    "viem": "^2.45.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
