Add Firecrawl-based moltbook.com scraper (twice-daily scan helper)

--- a/business/molt-scout/package.json
+++ b/business/molt-scout/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "run": "node src/run.js"
+    "run": "node src/run.js",
+    "moltbook:scrape": "bash src/moltbook_scan.sh"
   }
 }
