Wire token gate UI (Base): wallet connect + ERC20 balance check

--- a/business/agent-ops-toolkit-site/package.json
+++ b/business/agent-ops-toolkit-site/package.json
@@ -14,9 +14,13 @@
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
     "@mui/material-nextjs": "^7.3.8",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@tanstack/react-query": "^5.90.21",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "viem": "^2.46.0",
+    "wagmi": "^3.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
