--- a/business/agent-ops-toolkit-site/package.json
+++ b/business/agent-ops-toolkit-site/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
     "@mui/material-nextjs": "^7.3.8",
+    "@supabase/supabase-js": "^2.97.0",
     "@tanstack/react-query": "^5.90.21",
     "next": "16.1.6",
     "react": "19.2.3",
