--- a/business/agent-ops-toolkit-site/package.json
+++ b/business/agent-ops-toolkit-site/package.json
@@ -19,6 +19,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "stripe": "^20.3.1",
     "viem": "^2.46.0",
     "wagmi": "^3.4.3"
   },
