--- a/business/cyber-randy-responder/.env.example
+++ b/business/cyber-randy-responder/.env.example
@@ -9,7 +9,13 @@ BOT_HANDLE=@cyber_randy
 REQUIRE_STARRED=true
 REQUIRE_TAG=true
 
-# LLM (choose one)
+# OpenClaw internal brain (recommended)
+# Uses the Gateway's OpenAI-compatible endpoint: http://127.0.0.1:18789/v1/chat/completions
+OPENCLAW_GATEWAY_URL=http://127.0.0.1:18789
+OPENCLAW_GATEWAY_PASSWORD=
+OPENCLAW_AGENT_ID=main
+
+# Fallback direct OpenAI (optional)
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 
