--- a/business/cyber-randy-responder/package.json
+++ b/business/cyber-randy-responder/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.1"
+    "@supabase/supabase-js": "^2.49.1",
+    "dotenv": "^17.3.1"
   },
   "devDependencies": {
     "tsx": "^4.19.2",
