--- a/business/cyber-randy-responder/.env.example
+++ b/business/cyber-randy-responder/.env.example
@@ -1,6 +1,5 @@
 # Supabase (server-side). Use the NEW rotated service role key.
-SUPABASE_URL=
-SUPABASE_SERVICE_ROLE_KEY=
+
 
 # Chat
 BOT_HANDLE=@cyber_randy
@@ -12,7 +11,7 @@ REQUIRE_TAG=true
 # OpenClaw internal brain (recommended)
 # Uses the Gateway's OpenAI-compatible endpoint: http://127.0.0.1:18789/v1/chat/completions
 OPENCLAW_GATEWAY_URL=http://127.0.0.1:18789
-OPENCLAW_GATEWAY_PASSWORD=
+OPENCLAW_GATEWAY_PASSWORD=,.,.
 OPENCLAW_AGENT_ID=main
 
 # Fallback direct OpenAI (optional)
