--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ dist/
 
 # Generated dashboard outputs (optional). Comment out if you want GitHub to reflect the latest dashboard data.
 /business/molt-scout/public/latest.json
+
+# Firecrawl outputs (often large/noisy)
+.firecrawl/
+
+# Carapace grade generated reports
+/business/carapace-grade/reports/
