Arcade: unique usernames + photo upload (Supabase signed upload via server)

--- a/business/arcade-game/.env.example
+++ b/business/arcade-game/.env.example
@@ -1,3 +1,8 @@
+# Public (client)
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=e442eaaa1d55a9f4a094cccd35c0d0ad
+
+# Server (Vercel only)
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
