Claw Beacon: publish QUEUE.md from kanban (Beacon-first)

--- a/business/bot-team/package.json
+++ b/business/bot-team/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "beacon:sync": "node scripts/beacon_sync.mjs"
+    "beacon:sync": "node scripts/beacon_sync.mjs",
+    "beacon:publish-queue": "node scripts/beacon_publish_queue.mjs"
   }
 }
